option java_outer_classname = "LCTerminalInfo";
option java_package = "com.navinfo.opentsp.platform.location.protocol.dataaccess.terminal";

message TerminalInfo{
	required 	int64 		terminalId 				= 1;
	optional 	int32 		protocolType 			= 2;
	optional	int64		nodeCode				= 3;
	optional	string		authCode				= 4;
	optional	bool		regularInTerminal		= 5;
	optional	string		deviceId				= 6;	
	optional	int64		changeTid				= 7;	
	optional	BusinessType	type				= 8;
}

enum BusinessType{
	defaultType	                    =0;
	jianghuai						=1;
}
