option java_outer_classname = "LCDataUnsubscribe";
option java_package = "com.navinfo.opentsp.platform.location.protocol.platform";


message DataUnsubscribe{
	repeated	int64	terminalIdentify	=1;
}
